--- a/src/Components/layout/gameboard/style/game-cell.css
+++ b/src/Components/layout/gameboard/style/game-cell.css
@@ -19,6 +19,11 @@
 	font-size: 60px !important;
 }
 
+.cell-btn:hover {
+	opacity: 0.7 !important;
+	vertical-align: center;
+}
+
 .cell-btn.value-X:hover::after {
 	content: 'X' !important;
 }
