--- a/src/Components/layout/gameboard/style/game-cell.css
+++ b/src/Components/layout/gameboard/style/game-cell.css
@@ -10,13 +10,7 @@
 }
 
 .GameCell > * {
-	width: 100px !important;
-	height: 100px !important;
 	box-shadow: 0 0 5px #444, 0 0 5px #888;
-}
-
-.cell-btn {
-	font-size: 60px !important;
 }
 
 .cell-btn:hover {
@@ -30,4 +24,9 @@
 
 .cell-btn.value-O:hover::after {
 	content: 'O' !important;
+}
+
+.cell-btn:disabled {
+	background-color: #eee !important;
+	opacity: 1 !important;
 }
